debug(ci): check pattern

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: deno fmt --check
 
       - name: Type Check
-        run: deno check "**/*.ts"
+        run: deno check *.ts
 
   build:
     name: Build
